# resize_func

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  report.md
report/: report.md
src/: imgproc.cpp  imgproc.hpp  main.cpp  simd.cpp  test.cpp  test.hpp  utils.cpp  utils.hpp
test/: test.cpp  test.hpp
